<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="30dp"
    app:cardElevation="10dp"

    >

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_baseline_cloud_done_24" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="11dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/success"
                    android:textColor="#6C63FF"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="11dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/your_order_has_successfully_placed"
                    android:textColor="@color/black"
                    android:textSize="16sp" />


            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/OkCardView"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/purple_200"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="#6C63FF"
                    android:fontFamily="sans-serif-medium"
                    android:padding="10dp"
                    android:text="@string/ok"
                    android:textColor="@color/white"
                    android:textSize="22sp" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>