<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnToast"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:background="@drawable/custom_button_bg"
            android:text="@string/create_toast"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/order"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/custom_button_bg"
            android:text="@string/order_alert_dialog"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/btnExit"
            app:layout_constraintStart_toStartOf="@+id/btnExit"
            app:layout_constraintTop_toBottomOf="@+id/btnExit"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnExit"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/custom_button_bg"
            android:text="@string/exit_alert_dialog"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/btnToast"
            app:layout_constraintStart_toStartOf="@+id/btnToast"
            app:layout_constraintTop_toBottomOf="@+id/btnToast"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFragment"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/custom_button_bg"
            android:text="Fragment Dialog Box"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/order"
            app:layout_constraintStart_toStartOf="@+id/order"
            app:layout_constraintTop_toBottomOf="@+id/order" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>